Bug fix: scrollbar hiding

--- a/src/Row.css
+++ b/src/Row.css
@@ -14,6 +14,12 @@
     display: none;
 }
 
+.row__posters {
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-color: transparent transparent; /*just hides the scrollbar for firefox */
+}
+
 .row__poster {
     object-fit: contain;
     max-height: 100px;
